udpate css style

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: left;
 }
 
 a {
@@ -20,8 +21,6 @@ a:hover {
 
 body {
   margin: 0;
-  /* display: flex; */
-  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -32,21 +31,66 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #f9f9f9;
-
+  background-color: #4a90e2;
+  color: white;
+  padding: 0.75rem 1rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
   cursor: pointer;
-  transition: border-color 0.25s;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin: 0;
+  height: 100%;
+  cursor: pointer;
+  border: 1px solid transparent;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #4a90e2;
+  background-color: white;
+  color: #4a90e2;
+  border: 1px solid #4a90e2;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.upload-file-btn {
+  width: 100%;
+}
+
+label {
+  display: inline-block;
+  background-color: #4a90e2;
+  color: white;
+  padding: 0.75rem 1rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin: 0;
+  height: 100%;
+}
+
+input {
+  height: 100%;
+}
+
+#URL-input {
+  display: inline-block;
+  background-color: transparent;
+  color: #333333;
+  padding: 0.75rem 1rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin: 0;
+  height: 100%;
+  width: 50%;
+}
+
+#URL-input::placeholder {
+  color: #ccc;
 }
