--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ input {
   width: 100%;
 }
 
-label {
+#upload-btn-label {
   display: flex;
   flex-direction: column;
   background-color: #4b4b4b;
@@ -120,29 +120,14 @@ h3 {
   justify-self: center;
 }
 
-button {
-  background-color: rgb(255, 188, 63);
-  color: rgb(22, 22, 22);
-  padding: 0.75rem 1.25rem;
-  font-family: sans-serif;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  font-size: 1.2rem;
-  font-weight: 500;
-  margin: 0;
-  height: 100%;
-  cursor: pointer;
-  border: 1px solid transparent;
-  margin-left: 1rem;
-}
-button:hover {
+#render-url-btn:hover {
   border-color: rgb(255, 188, 63);
   background-color: rgb(22, 22, 22);
   color: rgb(255, 188, 63);
   border: 1px solid rgb(255, 188, 63);
 }
-button:focus,
-button:focus-visible {
+#render-url-btn:focus,
+#render-url-btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -203,4 +188,19 @@ table,
 tr,
 td {
   border: black;
+}
+
+#render-url-btn {
+  background-color: rgb(255, 188, 63);
+  color: rgb(22, 22, 22);
+  padding: 0.75rem 1.25rem;
+  font-family: sans-serif;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-weight: 500;
+  margin: 0;
+  height: 100%;
+  cursor: pointer;
+  border: 1px solid transparent;
+  margin-left: 1rem;
 }
