--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,7 @@ h3 {
   text-align: center;
   align-items: center;
   justify-self: center;
+  height: 100%;
 }
 
 #render-url-btn:hover {
@@ -193,7 +194,7 @@ td {
 #render-url-btn {
   background-color: rgb(255, 188, 63);
   color: rgb(22, 22, 22);
-  padding: 0.75rem 1.25rem;
+  padding: 1rem 1.25rem;
   font-family: sans-serif;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -203,4 +204,5 @@ td {
   cursor: pointer;
   border: 1px solid transparent;
   margin-left: 1rem;
+  font-size: 14px;
 }
